# timothyhartzog.github.io

./: .dockerignore  .gitignore  .nojekyll  CLAUDE.md  CNAME  Dockerfile  _quarto.yml  about.html  about.qmd  app.js  astro.config.mjs  blog-post-template.docx  index.html  index.qmd  nginx.conf  package-lock.json  package.json  plan.md  playwright.config.ts  requirements.txt  search.json  staticwebapp.config.json  styles.css
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
_extensions/claude-artifact/: _extension.yml  claude-artifact.lua
_site/: index.html  search.json
blog/: index.html  index.qmd
blog/posts/: hello-world.html
books/: index.qmd
books/example-book/: chapter1.qmd  chapter1.quarto_ipynb  chapter2.qmd  index.qmd
books/nato-spending/: chapter1.qmd  chapter2.qmd  chapter3.qmd  chapter4.qmd  chapter5.qmd  chapter6.qmd  debt-dashboard.html  index.qmd  nato-dashboard.html
css/: style.css
infrastructure/: cloudbuild.yaml
infrastructure/azure/: README.md
infrastructure/terraform/: .gitignore  cdn.tf  child-sites.tf  cloudbuild.tf  cloudrun.tf  dns.tf  (+5 more)
notebooks/: sample-analysis.py
public/: robots.txt
scripts/: export-notebooks.mjs  generate-template.mjs  new-analysis.mjs  new-blog-post.mjs  new-d3-viz.mjs  new-notebook.mjs  publish-draft.mjs
src/: content.config.ts
styles/: claude-artifacts.css  custom.scss
tests/: pages.spec.ts
wasm/: index.html
wasm-posts/: Cargo.toml
wasm-posts/src/: lib.rs  post_manager.rs  user_manager.rs
web/: _quarto.yml  editor.html  index.qmd  posts.html  styles.css  users.html
(+63 files in other folders)
