[package]
name = "wasm-posts"
version = "0.1.0"
edition = "2021"
description = "WebAssembly module for post management with user authentication"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Storage",
] }

[profile.release]
opt-level = "s"
lto = true
